[gd_scene load_steps=8 format=3 uid="uid://u7menyqkbccb"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_kw5km"]
[ext_resource type="Texture2D" uid="uid://fjqgcryfm2dp" path="res://graphics/player/player.png" id="1_wjjk1"]
[ext_resource type="Texture2D" uid="uid://bb45v5f0outmb" path="res://graphics/decals/white.png" id="3_h7nil"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rspyr"]
radius = 35.6931

[sub_resource type="Gradient" id="Gradient_eoqlk"]
colors = PackedColorArray(0.337255, 1, 1, 0.541176, 1, 1, 1, 0.85098)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d5hyr"]
gradient = SubResource("Gradient_eoqlk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g27jp"]
particle_flag_disable_z = true
spread = 6.86
gravity = Vector3(0, 0, 0)
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.3
scale_max = 0.8
color = Color(0.337255, 1, 1, 0.541176)
color_ramp = SubResource("GradientTexture1D_d5hyr")

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_kw5km")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(22, 2)
rotation = 1.5708
scale = Vector2(0.5, 0.556769)
texture = ExtResource("1_wjjk1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rspyr")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeReloadTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(73, 11)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(73, 6)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(73, 16)

[node name="GrenadeStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="GrenadeStartPosition"]
position = Vector2(75, 11)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(75, 11)
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_g27jp")
texture = ExtResource("3_h7nil")
lifetime = 0.2
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeReloadTimer" to="." method="_on_grenade_reload_timer_timeout"]
